--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ label {
     max-width: 100%;
     height: auto;
 }
+#bold{
+    font-weight: bold;
+}
 
 /*
  * -- LAYOUT STYLES --
@@ -164,13 +167,7 @@ a.pure-button-primary {
     color: #aaa;
 }
 
-/* This is the class used for the footer */
-.footer {
-    background: #111;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+
 
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
